--- a/documentation/classes/Core-Database-Redbean-DbConn.html
+++ b/documentation/classes/Core-Database-Redbean-DbConn.html
@@ -115,7 +115,7 @@
         <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/DbConn.php"><a href="files/src-dbconn.html"><abbr title="src/DbConn.php">DbConn.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">15</span>
+    <span class="phpdocumentor-element-found-in__line">16</span>
 
     </aside>
 
@@ -213,7 +213,7 @@ connection status. This object used by DbInterface as dependency</dd>
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/DbConn.php"><a href="files/src-dbconn.html"><abbr title="src/DbConn.php">DbConn.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">22</span>
+    <span class="phpdocumentor-element-found-in__line">23</span>
 
     </aside>
 
@@ -250,14 +250,14 @@ connection status. This object used by DbInterface as dependency</dd>
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/DbConn.php"><a href="files/src-dbconn.html"><abbr title="src/DbConn.php">DbConn.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">24</span>
+    <span class="phpdocumentor-element-found-in__line">25</span>
 
     </aside>
 
     
     <code class="phpdocumentor-code phpdocumentor-signature ">
     <span class="phpdocumentor-signature__visibility">public</span>
-                    <span class="phpdocumentor-signature__name">__construct</span><span>(</span><span class="phpdocumentor-signature__argument"><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-RedbeanDriverAbstract.html"><abbr title="\Core\Database\Redbean\RedbeanDriverAbstract">RedbeanDriverAbstract</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$driver</span></span><span class="phpdocumentor-signature__argument"><span>, </span><span class="phpdocumentor-signature__argument__return-type"><abbr title="\Core\Entify\Interfaces\EntificationInterface">EntificationInterface</abbr>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$entification</span></span><span>)</span><span> : </span><span class="phpdocumentor-signature__response_type">mixed</span></code>
+                    <span class="phpdocumentor-signature__name">__construct</span><span>(</span><span class="phpdocumentor-signature__argument"><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-Interfaces-DbDriverInterface.html"><abbr title="\Core\Database\Redbean\Interfaces\DbDriverInterface">DbDriverInterface</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$driver</span></span><span class="phpdocumentor-signature__argument"><span>, </span><span class="phpdocumentor-signature__argument__return-type"><abbr title="\Core\Entify\Interfaces\EntificationInterface">EntificationInterface</abbr>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$entification</span></span><span>)</span><span> : </span><span class="phpdocumentor-signature__response_type">mixed</span></code>
 
         <section class="phpdocumentor-description"></section>
 
@@ -265,7 +265,7 @@ connection status. This object used by DbInterface as dependency</dd>
     <dl class="phpdocumentor-argument-list">
                     <dt class="phpdocumentor-argument-list__entry">
                 <span class="phpdocumentor-signature__argument__name">$driver</span>
-                : <span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-RedbeanDriverAbstract.html"><abbr title="\Core\Database\Redbean\RedbeanDriverAbstract">RedbeanDriverAbstract</abbr></a></span>
+                : <span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-Interfaces-DbDriverInterface.html"><abbr title="\Core\Database\Redbean\Interfaces\DbDriverInterface">DbDriverInterface</abbr></a></span>
                             </dt>
             <dd class="phpdocumentor-argument-list__definition">
                     <section class="phpdocumentor-description"></section>
@@ -302,7 +302,7 @@ connection status. This object used by DbInterface as dependency</dd>
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/DbConn.php"><a href="files/src-dbconn.html"><abbr title="src/DbConn.php">DbConn.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">87</span>
+    <span class="phpdocumentor-element-found-in__line">88</span>
 
     </aside>
 
@@ -348,7 +348,7 @@ connection status. This object used by DbInterface as dependency</dd>
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/DbConn.php"><a href="files/src-dbconn.html"><abbr title="src/DbConn.php">DbConn.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">95</span>
+    <span class="phpdocumentor-element-found-in__line">96</span>
 
     </aside>
 
@@ -394,7 +394,7 @@ connection status. This object used by DbInterface as dependency</dd>
     <aside class="phpdocumentor-element-found-in">
     <abbr class="phpdocumentor-element-found-in__file" title="src/DbConn.php"><a href="files/src-dbconn.html"><abbr title="src/DbConn.php">DbConn.php</abbr></a></abbr>
     :
-    <span class="phpdocumentor-element-found-in__line">36</span>
+    <span class="phpdocumentor-element-found-in__line">37</span>
 
     </aside>
 
@@ -402,14 +402,14 @@ connection status. This object used by DbInterface as dependency</dd>
 
     <code class="phpdocumentor-code phpdocumentor-signature ">
     <span class="phpdocumentor-signature__visibility">public</span>
-                    <span class="phpdocumentor-signature__name">switchDatabase</span><span>(</span><span class="phpdocumentor-signature__argument"><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-RedbeanDriverAbstract.html"><abbr title="\Core\Database\Redbean\RedbeanDriverAbstract">RedbeanDriverAbstract</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$driver</span></span><span class="phpdocumentor-signature__argument"><span>[</span><span>, </span><span class="phpdocumentor-signature__argument__return-type">string&nbsp;</span><span class="phpdocumentor-signature__argument__name">$key</span><span> = </span><span class="phpdocumentor-signature__argument__default-value">&#039;default&#039;</span><span> ]</span></span><span class="phpdocumentor-signature__argument"><span>[</span><span>, </span><span class="phpdocumentor-signature__argument__return-type">bool|null&nbsp;</span><span class="phpdocumentor-signature__argument__name">$frozen</span><span> = </span><span class="phpdocumentor-signature__argument__default-value">null</span><span> ]</span></span><span>)</span><span> : </span><span class="phpdocumentor-signature__response_type">void</span></code>
+                    <span class="phpdocumentor-signature__name">switchDatabase</span><span>(</span><span class="phpdocumentor-signature__argument"><span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-Interfaces-DbDriverInterface.html"><abbr title="\Core\Database\Redbean\Interfaces\DbDriverInterface">DbDriverInterface</abbr></a>&nbsp;</span><span class="phpdocumentor-signature__argument__name">$driver</span></span><span class="phpdocumentor-signature__argument"><span>[</span><span>, </span><span class="phpdocumentor-signature__argument__return-type">string&nbsp;</span><span class="phpdocumentor-signature__argument__name">$key</span><span> = </span><span class="phpdocumentor-signature__argument__default-value">&#039;default&#039;</span><span> ]</span></span><span class="phpdocumentor-signature__argument"><span>[</span><span>, </span><span class="phpdocumentor-signature__argument__return-type">bool|null&nbsp;</span><span class="phpdocumentor-signature__argument__name">$frozen</span><span> = </span><span class="phpdocumentor-signature__argument__default-value">null</span><span> ]</span></span><span>)</span><span> : </span><span class="phpdocumentor-signature__response_type">void</span></code>
 
     
         <h5 class="phpdocumentor-argument-list__heading">Parameters</h5>
     <dl class="phpdocumentor-argument-list">
                     <dt class="phpdocumentor-argument-list__entry">
                 <span class="phpdocumentor-signature__argument__name">$driver</span>
-                : <span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-RedbeanDriverAbstract.html"><abbr title="\Core\Database\Redbean\RedbeanDriverAbstract">RedbeanDriverAbstract</abbr></a></span>
+                : <span class="phpdocumentor-signature__argument__return-type"><a href="classes/Core-Database-Redbean-Interfaces-DbDriverInterface.html"><abbr title="\Core\Database\Redbean\Interfaces\DbDriverInterface">DbDriverInterface</abbr></a></span>
                             </dt>
             <dd class="phpdocumentor-argument-list__definition">
                     <section class="phpdocumentor-description"><p>Instance of DbSql ot SbSqlite</p>
